--- a/jquery testing/index.html
+++ b/jquery testing/index.html
@@ -1,11 +1,14 @@
 <!DOCTYPE html>
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
 <html>
-    <head>
-        <title></title>
-        <!--Add your script tag here.-->
-        <script type="text/javascript" src="script.js"></script>
-    </head>
-    <body>
-        <div></div>
-    </body>
+	<head>
+		<title>Button Magic</title>
+		<script type="text/javascript" src="script.js"></script>
+        <link rel='stylesheet' type='text/css' href='stylesheet.css'/>
+	</head>
+	<body>
+     <div><br/><strong>Click Me!</strong></div>   
+	</body>
 </html>
